# Sharp

./: CMakeLists.txt  README.md
Dependencies/GLFW/include/GL/: glfw3.h  glfw3native.h
Sharp-core/: main.cpp
Sharp-core/src/graphics/: window.cpp  window.h
Sharp-core/src/maths/: funcs.h  mat4.cpp  mat4.h  maths.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
